simulator/src/test/resources/model_files/errors/malformed.mdsl

This is not valid MDSL...
<>
?
